# Lunabotics

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Back.perspective  DOCKERFILE  Front + Sides.perspective  Inside Cams.perspective  README.md  nvblox_changes.txt  order.txt  point_cloud_data.npz  stufftorun.txt
src/behaviortree_executor/: CMakeLists.txt  package.xml
src/behaviortree_executor/behavior_trees/: main_tree.xml
src/behaviortree_executor/config/: bt_executor.yaml  sample_bt_executor.yaml
src/behaviortree_executor/launch/: behavior_tree_launch.py
src/behaviortree_executor/src/: CMakeLists.txt  behavior_tree_executor.cpp  behaviortree_executor.cpp
src/behaviortree_executor/src/action/: auto_dig.cpp  auto_dig.hpp  auto_offload.cpp  auto_offload.hpp  calibrate_field_coordinate.cpp  calibrate_field_coordinates.hpp  go_to_dig_location.cpp  go_to_dig_location.hpp
src/decawave/: CMakeLists.txt  package.xml
src/decawave/include/decawave/: decawave.h
src/decawave/launch/: decawave_start_launch.xml
src/decawave/src/: decawave_node.cpp  decawave_subscriber.cpp
src/gazebo/gazebo_files/: CMakeLists.txt  README.md  package.xml
src/gazebo/gazebo_files/worlds/: COSMIC_field.sdf  NASA_field.sdf  UCF_field.sdf  arena_nasa.world  arena_ucf.world  competition_field.sdf  test_world.sdf
src/gazebo/ros_gz_description/: CMakeLists.txt  package.xml
src/gazebo/ros_gz_launch/: CMakeLists.txt  package.xml
src/gazebo/ros_gz_launch/config/: camera.rviz  ros_gz_bridge.yaml
src/gazebo/ros_gz_launch/launch/: COSMIC_field.launch.py  NASA_field.launch.py  UCF_field.launch.py  competition_field.launch.py  joy_gazebo.launch.py  master_ASM.launch.py  test.launch.py
src/gstreamer/: package.xml  plugin.xml  setup.cfg  setup.py
src/gstreamer/gstreamer/: camera1CheckBox_gstreamer.py  client.py  client_gstreamer.py  client_main.py  client_widget.py  install_depends.bash  server_gstreamer.py  server_node.py  standalone_client.py
src/gstreamer/launch/: laptop_launch.py
src/gstreamer/resource/: gstreamer-select.ui
src/isaac_ros/isaac_ros_launch/: package.xml  setup.cfg  setup.py
src/isaac_ros/isaac_ros_launch/isaac_ros_launch/: frame_id_renamer.py  odom_publisher.py  odom_tf_publisher.py
src/isaac_ros/isaac_ros_launch/launch/: EVERYTHING_launch.py  apriltag_launch.py  gazebo_launch.py  isaac_launch.py  nav2_gazebo_launch.py  nav2_launch.py  nvblox.launch.py  nvblox_multicam.launch.py  rviz.launch.py  zed2i.launch.py  zed2i_multicam.launch.py  zed_multi_camera.launch.py
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/launch/: motor_control_launch.py  motor_launch.py  motorcontrol_start_launch.xml  realsense_launch.py
src/motor_control/src/: motor_control_node.cpp
src/navx/: CMakeLists.txt  package.xml
src/navx/include/ahrs/: AHRSProtocol.h  IMURegisters.h  SerialPort.h
src/navx/install/: local_setup.sh  setup.sh  setup.zsh
src/navx/launch/: navx_start_launch.xml
src/navx/log/: latest_build
src/navx/src/: AHRS.cpp  ContinuousAngleTracker.cpp  InertialDataIntegrator.cpp  OffsetTracker.cpp  SerialIO.cpp  SerialPort.cpp  navx_node.cpp  navx_subscriber.cpp
src/navx_cpp_package/: CMakeLists.txt  package.xml
src/navx_cpp_package/include/ahrs/: AHRS.h  IIOCompleteNotification.h  IMUProtocol.h  SerialIO.h
src/navx_cpp_package/launch/: navx_start_launch.xml
src/navx_cpp_package/src/: AHRS.cpp  ContinuousAngleTracker.cpp  InertialDataIntegrator.cpp  OffsetTracker.cpp  SerialIO.cpp  navx_cpp_node.cpp  navx_subscriber.cpp
src/point_processing/: package.xml  point_proc.md  setup.cfg  setup.py
src/point_processing/point_processing/: gen_grid_world.py  test_publisher.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/hooks/: robot_description.dsv.in  robot_description.sh.in
src/robot_description/launch/: robot_description.launch.py
src/robot_description/models/master_ASM/: model.config
src/ros2socketcan_bridge/: CMakeLists.txt  README.md  package.xml
src/ros2socketcan_bridge/src/: ros2socketcan.cpp  ros2socketcan.h
src/rovr_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rovr_control/action/: auto_dig.cpp  auto_offload.cpp  calibrate_field_coordinate.cpp  go_to_dig_location.cpp
src/rovr_control/launch/: camera_launch.py  laptop_launch.py  main_launch.py  main_launch_no_joysticks.py  main_no_joysticks_launch.py  nav2_launch.py  realsense_launch.py  rovrcontrol_start_launch.xml  rviz.launch.py
src/rovr_control/rovr_control/: auto_dig_nav_offload_server.py  auto_dig_server.py  auto_offload_server.py  autonomous_procedures.py  behavior_tree_executor.cpp  calibrate_field_coordinate_server.py  controls.txt  costmap_2d.py  dig_location_server.py  gamepad_constants.py  main_control_node.cpp  main_control_node.py  multi_auto_dig_server.py  node_util.py  read_serial.py  stream_deck_node.py  testing_auto.py  xbox_controller_constants.py
src/rovr_control/rovr_control/statemachine_module/: statemachine.py
src/rovr_control/test/: test_action.py  test_action2.py
src/rqt_plugins/rqt_camera/: CHANGELOG.rst  package.xml  plugin.xml  setup.py
src/rqt_plugins/rqt_camera/resource/: cameras.ui
src/rqt_plugins/rqt_camera/rqt_camera/: cameras.py  cameras_widget.py  main.py
src/rqt_plugins/rqt_camera/src/rqt_msg/: main.py
src/rqt_plugins/rqt_camera_old/: package.xml  plugin.xml  setup.cfg  setup.py
src/rqt_plugins/rqt_camera_old/resource/: cameras.ui
src/rqt_plugins/rqt_msg/: package.xml  plugin.xml  setup.py
src/skimmer/: package.xml  setup.cfg  setup.py
src/skimmer/launch/: check_load_launch.py
src/skimmer/skimmer/: check_load.py  ros_check_load.py  skimmer_node.py
src/telecom/: CMakeLists.txt  package.xml
src/telecom/include/formatter_string/: formatter.cc  formatter.cpp  formatter.hh  formatter.hpp
src/telecom/include/telecom/: telecom.cpp  telecom.h
src/telecom/src/: compile.sh  mc_to_robot_node.cpp  robot_to_mc_node.cpp  telecom.cpp  telecomTest.cpp  telecommTestBufferInMain.cpp
src/webcam/: CMakeLists.txt  package.xml
src/webcam/src/: webcam_node.py
(+320 files in other folders)
