<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behaviortree_executor</name>
  <version>0.1.0</version>
  <description>This is the behavior tree of the robot</description>
  <maintainer email="hwvxyeej@gmail.com">Adam Yaj</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>rovr_interfaces</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>behaviortree_cpp</exec_depend>
  <exec_depend>behaviortree_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
