<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rovr_control</name>
  <version>0.0.1</version>
  <description>This package is for the main robot control loop.</description>
  <maintainer email="anthonybrog@gmail.com">Anthony</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>statemachine</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
