<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rovr_control</name>
  <version>0.1.0</version>
  <description>This is the main robot control loop</description>
  <maintainer email="brogn002@umn.edu">Anthony Brogni</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>motor_control</exec_depend>
  <exec_depend>drivetrain</exec_depend>
  <exec_depend>skimmer</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rovr_interfaces</exec_depend>
  <exec_depend>ros2socketcan_bridge</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>