<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skimmer</name>
  <version>0.2.0</version>
  <description>This package is for the skimmer subsystem.</description>
  <maintainer email="brogn002@umn.edu">Anthony Brogni</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rovr_interfaces</build_depend>
  <build_depend>python3-opencv</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rovr_interfaces</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>